--- a/myKalaMobile/platforms/android/app/src/main/AndroidManifest.xml
+++ b/myKalaMobile/platforms/android/app/src/main/AndroidManifest.xml
@@ -8,11 +8,11 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            <intent-filter android:label="@string/launcher_name">
+            <intent-filter>
+                <data android:host="mail" android:scheme="mykala" />
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:host="mail" android:pathPrefix="/" android:scheme="mykala" />
             </intent-filter>
         </activity>
         <provider android:authorities="${applicationId}.provider" android:exported="false" android:grantUriPermissions="true" android:name="org.apache.cordova.camera.FileProvider">
